@@ -1,3 +1,9 @@
+2013-04-21 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/stm8/gen.c,
+	  src/stm8/main.c:
+	  STM8: Applied patch from Valentin Dudouyt to implement __critical.
+
 2013-04-19 Philipp Klaus Krause <pkk AT spth.de>
 
 	* device/lib/stm8/Makefile.in:
